--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/angular.json
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css", 
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
@@ -90,6 +91,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
